This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: "Wrong" invalid character identified
Type: Stage: resolved
Components: Versions: Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: aroberge, miss-islington, pablogsal
Priority: normal Keywords: patch

Created on 2021-06-07 17:07 by aroberge, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 26589 merged pablogsal, 2021-06-08 00:14
PR 26600 merged miss-islington, 2021-06-08 11:25
PR 26608 merged pablogsal, 2021-06-08 18:31
PR 26610 merged miss-islington, 2021-06-08 19:02
Messages (5)
msg395267 - (view) Author: Andre Roberge (aroberge) * Date: 2021-06-07 17:07
When using Python 3.10.0b2 on a line with more than one invalid characters, the second one is identified as being incorrect, whereas in previous versions the first such character was identified.


> py -3.8 unicode_quote.py
  File "unicode_quote.py", line 2
    a = « hello » « world »
        ^
SyntaxError: invalid character in identifier


> py -3.9 unicode_quote.py
  File "C:\...\unicode_quote.py", line 2
    a = « hello » « world »
        ^
SyntaxError: invalid character '«' (U+00AB)


> py -3.10 unicode_quote.py
  File "C:\...\unicode_quote.py", line 2
    a = « hello » « world »
                ^
SyntaxError: invalid character '»' (U+00BB)
msg395324 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2021-06-08 11:25
New changeset d334c73b56756e90c33ce06e3a6ec23271aa099d by Pablo Galindo in branch 'main':
bpo-44335: Fix a regression when identifying invalid characters in syntax errors (GH-26589)
https://github.com/python/cpython/commit/d334c73b56756e90c33ce06e3a6ec23271aa099d
msg395325 - (view) Author: miss-islington (miss-islington) Date: 2021-06-08 11:47
New changeset 933b5b63598968c1ab4976f92570696a33c72cc4 by Miss Islington (bot) in branch '3.10':
bpo-44335: Fix a regression when identifying invalid characters in syntax errors (GH-26589)
https://github.com/python/cpython/commit/933b5b63598968c1ab4976f92570696a33c72cc4
msg395353 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2021-06-08 19:02
New changeset bafe0aade5741ab0d13143ee261711fdd65e8a1f by Pablo Galindo in branch 'main':
bpo-44335: Ensure the tokenizer doesn't go into Python with the error set (GH-26608)
https://github.com/python/cpython/commit/bafe0aade5741ab0d13143ee261711fdd65e8a1f
msg395356 - (view) Author: miss-islington (miss-islington) Date: 2021-06-08 19:25
New changeset 2a8d7122e0ceeb56b716cff7f8f31f13c26ad691 by Miss Islington (bot) in branch '3.10':
bpo-44335: Ensure the tokenizer doesn't go into Python with the error set (GH-26608)
https://github.com/python/cpython/commit/2a8d7122e0ceeb56b716cff7f8f31f13c26ad691
History
Date User Action Args
2022-04-11 14:59:46adminsetgithub: 88501
2021-06-08 19:25:25miss-islingtonsetmessages: + msg395356
2021-06-08 19:02:23miss-islingtonsetpull_requests: + pull_request25193
2021-06-08 19:02:12pablogsalsetmessages: + msg395353
2021-06-08 18:31:13pablogsalsetpull_requests: + pull_request25191
2021-06-08 11:47:05miss-islingtonsetmessages: + msg395325
2021-06-08 11:28:25pablogsalsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2021-06-08 11:25:40miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request25183
2021-06-08 11:25:26pablogsalsetmessages: + msg395324
2021-06-08 00:14:36pablogsalsetkeywords: + patch
stage: patch review
pull_requests: + pull_request25174
2021-06-07 17:07:47arobergecreate