bpo-44335: Ensure the tokenizer doesn't go into Python with the error set (GH-26608)